реализовал передачу в руки оборудования

--- a/germax-frontend/src/templates/components/content-page-stockman-equipment-under-repair/index.html
+++ b/germax-frontend/src/templates/components/content-page-stockman-equipment-under-repair/index.html
@@ -46,7 +46,7 @@
 								</li>
 								<li>
 									<a class="dropdown-item" href="#">Rapporter un problème</a>
-									<!-- для сообщения о любых проблемах, встреченных в процессе обслуживания менеджеру -->
+									<!-- для сообщения о любых проблемах, встреченных в процессе обслуживания менеджеру. Это пойдет в messagerie -->
 								</li>
 							</ul>
 						</div>
