--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
@@ -85,7 +85,7 @@
 					<div class="modal-body">
 							<form id="notFoundRequestForm">
 									<div class="mb-3">
-											<label for="equipmentCategory" class="form-label">Catégorie du matériel</label>
+											<label for="equipmentCategory" class="form-label" name="category">Catégorie du matériel</label>
 											<select class="form-select" id="equipmentCategory" name="category">
 													<option value="laptops">Ordinateurs portables</option>
 													<option value="monitors">Ecrans d'ordinateurs</option>
