можно отправить только то количество серийных номеров соответствующее количеству доступных единиц

--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -386,6 +386,9 @@
             <label for="equipmentBrand" class="mt-3">Marque</label>
             <input type="text" class="form-control" id="equipmentBrand" placeholder="Marque de l'équipement">
 
+						<label for="equipmentQuantity" class="mt-3">Quantité</label>
+            <input type="text" class="form-control" id="equipmentQuantity" placeholder="Quantité disponible de l'équipement">
+
             <label for="equipmentDescription" class="mt-3">Description</label>
             <textarea class="form-control" id="equipmentDescription" rows="3" placeholder="Description de l'équipement"></textarea>
 
