--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.css
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.css
@@ -1,2 +1,13 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
+
+
+.highlight {
+	background-color: #f9f9f9; /* Цвет фона для выделенных строк */
+}
+
+.highlight-border {
+	border: 2px solid #ccc; /* Граница для группы строк */
+	margin-bottom: 10px; /* Отступ между группами строк */
+	border-radius: 5px; /* Скругление углов */
+}
