сохранение новой категории

--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -70,8 +70,8 @@
 				<div class="modal-body">
 					<form>
 						<div class="form-group">
-							<label for="categoryName">Nom de la catégorie</label>
-							<input type="text" class="form-control" id="categoryName">
+							<label for="newCategoryName">Nom de la catégorie</label>
+							<input type="text" class="form-control" id="newCategoryName">
 						</div>
 					</form>
 				</div>
