--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -14,7 +14,7 @@
 	<div id="listOrdersTitle"></div>
 
 	<!-- Modal for Adding Equipment -->
-	<div class="modal fade show active" id="addEquipmentModal" tabindex="-1" aria-labelledby="addEquipmentModalLabel"
+	<div class="modal fade" id="addEquipmentModal" tabindex="-1" aria-labelledby="addEquipmentModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -25,26 +25,39 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<form>
+					<form id="addEquipmentForm">
 						<div class="form-group">
 							<label for="equipmentName">Nom</label>
-							<input type="text" class="form-control" id="equipmentName">
+							<input type="text" class="form-control" id="equipmentName" required>
 						</div>
 						<div class="form-group">
-							<label for="equipmentCategory">Catégorie</label>
-							<select class="form-control" id="categoryName">
-								<option value="laptop">Laptop</option>
-								<option value="computer_monitor">Computer Monitor</option>
-								<option value="smartphone">Smartphone</option>
-								<option value="accessory">Accessory</option>
-								<option value="tablet">Tablet</option>
-								<option value="VR_headset">VR Headset</option>
+							<label for="categoryName">Catégorie</label>
+							<select class="form-control" id="categoryName" required>
+								<option value="1">Laptop</option>
+								<option value="2">Computer Monitor</option>
+								<option value="3">Smartphone</option>
+								<option value="4">Accessory</option>
+								<option value="5">Tablet</option>
+								<option value="6">VR Headset</option>
 								<!-- нужно добавить чтобы категории динамически обновлялись -->
 							</select>
 						</div>
 						<div class="form-group">
+							<label for="brandName">Marque</label>
+							<input type="text" class="form-control" id="brandName" required>
+							<div id="brandSuggestions" class="list-group"></div>
+						</div>
+						<div class="form-group">
 							<label for="equipmentDescription">Description</label>
-							<textarea class="form-control" id="equipmentDescription" rows="3"></textarea>
+							<textarea class="form-control" id="equipmentDescription" rows="3" required></textarea>
+						</div>
+						<div class="form-group">
+							<label for="serialNumber">Numéro de série</label>
+							<input type="text" class="form-control" id="serialNumber" required>
+						</div>
+						<div class="form-group">
+							<label for="equipmentPhoto">Photo</label>
+							<input type="file" class="form-control-file" id="equipmentPhoto" accept="image/*" required>
 						</div>
 					</form>
 				</div>
@@ -55,6 +68,8 @@
 			</div>
 		</div>
 	</div>
+
+
 
 	<!-- Modal for Adding Category -->
 	<div class="modal fade show active" id="addCategoryModal" tabindex="-1" aria-labelledby="addCategoryModalLabel"
@@ -390,7 +405,8 @@
 						<input type="text" class="form-control" id="equipmentBrand" placeholder="Marque de l'équipement">
 
 						<label for="equipmentQuantity" class="mt-3">Quantité</label>
-            <input type="text" class="form-control" id="equipmentQuantity" placeholder="Quantité disponible de l'équipement">
+						<input type="text" class="form-control" id="equipmentQuantity"
+							placeholder="Quantité disponible de l'équipement">
 
 						<label for="equipmentDescription" class="mt-3">Description</label>
 						<textarea class="form-control" id="equipmentDescription" rows="3"
