добавляю категории и оборудования и вывожу оборудования

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -11,31 +11,32 @@
 		<div id="supportModalContainer">
 		</div>
 	</nav>
-	 <!-- Контейнер для вкладок, расположенный прямо под навигацией -->
-    <!-- Здесь будет разметка вкладок -->
-  </div>
+	<!-- Контейнер для вкладок, расположенный прямо под навигацией -->
+	<!-- Здесь будет разметка вкладок -->
+</div>
 
-	<div class="row g-0">
-		<div class="col-md-3">
-			<div class="list-group">
-				<!-- вертикальное меню слева -->
-				<div id="dynamicMenu"></div>
-			</div>
-		</div>
-		<div class="col-md-9">
-			<!-- Содержимое для студентов и преподавателей -->
-			<div id="tabPlace"></div>
-			<div id="myLoans"></div>
-			<div id="clientLoansHistory"></div>
-			<div id="modalNewStudentOrTeacherRequest"></div>
-			<div id="modalRequestLoan"></div>
-			<div id="modalLoanForm"></div>
-			<div id="modalClientLoans"></div>
-			<!-- Содержимое для админа -->
-			<div id="adminReportsModal"></div>
-			<div id="adminFeedBackModal"></div>
-			<div id="adminContainerSettingsModal"></div>
-			<!-- Содержимое выбранной секции -->
+<div class="row g-0">
+	<div class="col-md-3">
+		<div class="list-group">
+			<!-- вертикальное меню слева -->
+			<div id="dynamicMenu"></div>
 		</div>
 	</div>
+	<div class="col-md-9">
+		<!-- Содержимое для студентов и преподавателей -->
+		<div id="tabPlace"></div>
+		<div id="myLoans"></div>
+		<div id="clientLoansHistory"></div>
+		<div id="modalNewStudentOrTeacherRequest"></div>
+		<div id="modalRequestLoan"></div>
+		<div id="modalLoanForm"></div>
+		<div id="modalClientLoans"></div>
+		<!-- Содержимое для админа -->
+		<div id="adminReportsModal"></div>
+		<div id="adminFeedBackModal"></div>
+		<div id="adminContainerSettingsModal"></div>
+		<!-- Содержимое для кладовщика -->
+		<div id="profileContainer"></div>
+	</div>
+</div>
 </div>
