--- a/germax-frontend/src/templates/components/content-page-dashboard/index.css
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.css
@@ -2,3 +2,19 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
 
 
+.badge {
+	display: inline-block;
+	padding: 0.25em 0.4em;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: 0.375rem;
+}
+
+.badge-danger {
+	color: #fff;
+	background-color: #dc3545;
+}
