--- a/germax-frontend/src/templates/components/content-page-loans-contact-manager/index.html
+++ b/germax-frontend/src/templates/components/content-page-loans-contact-manager/index.html
@@ -1,23 +1,13 @@
 <div class="tab-pane fade show active" id="communication-manager-reverse" role="tabpanel">
-	<h2>Communication avec le gestionnaire d'inventaire</h2>
+	<h2>Messagerie</h2>
 	<div class="communication-form">
 		<form>
 			<div class="form-group">
-				<label for="inventoryManagerSelect">Sélectionner le gestionnaire d'inventaire</label>
+				<label for="inventoryManagerSelect">Sélectionner le type d'utilisateur</label>
 				<select class="form-control" id="inventoryManagerSelect">
-					<!-- Dynamiquement chargé avec les gestionnaires d'inventaire -->
-				</select>
-			</div>
-			<div class="form-group">
-				<label for="communicationTopicSelect">Sujet de la communication</label>
-				<select class="form-control" id="communicationTopicSelect">
-					<option value="equipment-request">Demande d'équipement</option>
-					<option value="maintenance-status">Statut de maintenance</option>
-					<option value="equipment-return">Retour d'équipement</option>
-					<option value="general-query">Question générale</option>
-					<option value="reservation-cancellation">Annulation de réservation</option>
-					<option value="reservation-extension">Extension de réservation</option>
-					<option value="future-availability">Disponibilité future</option>
+					<option>Etudiant</option>
+					<option>Professeur</option>
+					<option>Gestionnaire</option>
 				</select>
 			</div>
 			<div class="form-group">
