cancel equipment realization

--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -10,7 +10,7 @@
 	<div id="orderForm"></div>
 	<!-- Заголовок список заказов для менеджера -->
 	<div id="listOrdersTitle"></div>
-
+	<div id="titleOrdersRequest"></div>
 
 	<div class="table-responsive">
 		<table class="table">
