--- a/germax-frontend/src/templates/components/footer/index.html
+++ b/germax-frontend/src/templates/components/footer/index.html
@@ -1,5 +1,17 @@
-<footer class="footer mt-auto py-3">
+<footer class="bg-dark text-white text-center py-4">
 	<div class="container">
-		<h2>Footer</h2>
+		<div class="row">
+			<div class="col-md-6 mb-3">
+				<a href="/page-conditions-of-use/" class="text-white">Conditions d'utilisation</a>
+			</div>
+			<div class="col-md-6 mb-3">
+				<a href="/page-privacy-policy/" class="text-white">Politique de confidentialité</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<p class="mb-0">© 2024 GERMALOC. Tous droits réservés.</p>
+			</div>
+		</div>
 	</div>
 </footer>
