--- a/germax-frontend/src/templates/components/header/index.html
+++ b/germax-frontend/src/templates/components/header/index.html
@@ -1,3 +1,16 @@
-<header>
-	<h2>Header</h2>
-</header>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23cez/3paNdF+ZlsHrya1voWQ0yE/fbfl2D3" crossorigin="anonymous">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<div class="container-fluid">
+			<a class="navbar-brand" href="#">GERMALOC</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<button class="btn btn-auth" onclick="location.href='auth.html'">Déconnexion/Inscription</button>
+						</li>
+					</ul>
+			</div>
+	</div>
+</nav>
