visual for auth

--- a/germax-frontend/src/templates/components/content-page-registration/index.html
+++ b/germax-frontend/src/templates/components/content-page-registration/index.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<!-- <div class="container mt-5">
 	<div class="row justify-content-center">
 		<div class="col-md-6">
 			<div class="card">
@@ -50,4 +50,40 @@
 		</div>
 	</div>
 </div>
-</div>
+</div> -->
+
+<section>
+	<div class="head-block">
+		<div class="left-block">
+			<div class="link">
+				<a class="link_1" href="/">Se connecter</a>
+				<a class="link_2" href="#">S'inscrire</a>
+			</div>
+			<form method="post">
+				<h2>Connectez-vous pour continuer</h2>
+				<div class="inputbox">
+					<input type="text" required>
+					<label for="">Login</label>
+				</div>
+				<div class="inputbox">
+					<input type="password" required>
+					<label for="">Mot de passe</label>
+				</div>
+				<div class="forget">
+					<label for="checkbox">Se souvenir de moi
+						<span>
+							<input type="checkbox">
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+							</svg>
+						</span>
+					</label>
+				</div>
+				<button class="btn" type="submit">Connexion</button>
+			</form>
+		</div>
+	</div>
+	<div class="right-block">
+		<!-- Content for right block goes here -->
+	</div>
+</section>
