--- a/germax-frontend/src/templates/components/content-page-index/index.html
+++ b/germax-frontend/src/templates/components/content-page-index/index.html
@@ -22,7 +22,7 @@
 					<a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#contactModal">Contact</a>
 				</li>
 				<li class="nav-item">
-					<button class="btn btn-auth" onclick="location.href='/page-registration/'">Connexion/Inscription</button>
+					<button class="btn btn-auth" onclick="location.href='/auth/'">Connexion/Inscription</button>
 				</li>
 			</ul>
 		</div>
