--- a/germax-frontend/src/templates/components/content-auth/index.html
+++ b/germax-frontend/src/templates/components/content-auth/index.html
@@ -1,57 +1,3 @@
-<!-- <div class="container mt-5">
-	<div class="row justify-content-center">
-		<div class="col-md-6">
-			<div class="card">
-				<div class="card-body">
-					<h5 class="card-title text-center">Registration</h5>
-					<form method="POST" action="../../../../../germax-api/src/endpoints/register.php" id="registrationForm">
-						<div class="mb-3">
-							<label for="inputLastname" class="form-label">Nom</label>
-							<input type="text" class="form-control" id="inputLastname" name="lastname"
-								placeholder="Enter your lastname">
-						</div>
-						<div class="mb-3">
-							<label for="inputFirstname" class="form-label">Prénom</label>
-							<input type="text" class="form-control" id="inputFirstname" name="firstname"
-								placeholder="Enter your firstname">
-						</div>
-						<div class="mb-3">
-							<label for="inputPhone" class="form-label">Téléphone</label>
-							<input type="tel" class="form-control" id="inputPhone" name="phone" placeholder="Enter your phone number">
-						</div>
-						<div class="mb-3">
-							<label for="inputEmail" class="form-label">Adresse mail</label>
-							<input type="email" class="form-control" id="inputEmail" name="email" placeholder="Enter your best email">
-						</div>
-						<div class="mb-3">
-							<label for="inputPassword" class="form-label">Mot de passe</label>
-							<input type="password" class="form-control" id="inputPassword" name="password"
-								placeholder="Invent your Password">
-						</div>
-						<div class="mb-3">
-							<label for="confirmPassword" class="form-label">Confirmer le mot de passe</label>
-							<input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
-								placeholder="Confirm Password">
-						</div>
-						<div class="mb-3">
-							<label for="type-permission" class="form-label">Type d'utilisateur</label>
-							<select class="form-control" name="type-permission">
-								<option value="admin">Admin</option>
-								<option value="rental-manager">Manager</option>
-								<option value="stockman">Gestionnaire de stocks</option>
-								<option value="teacher">Enseignant</option>
-								<option value="student">Etudiant</option>
-							</select>
-						</div>
-						<button type="submit" class="btn btn-primary btn-block">Register</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-</div> -->
-
 <section>
 	<div class="head-block">
 		<div class="left-block">
@@ -115,7 +61,7 @@
 						<input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
 							placeholder="Confirm Password">
 					</div>
-					<div class="inputbox userType">
+					<div class="inputbox userType" id="userTypeContainer">
 						<label for="type-permission" class="form-label"></label>
 						<select class="form-control form-select" name="type-permission">
 							<option value="" disabled selected>Choisissez un type</option>
@@ -125,8 +71,9 @@
 							<option value="teacher">Enseignant</option>
 							<option value="student">Etudiant</option>
 						</select>
+						<div id="facultyContainer" class="inputbox"></div>
 					</div>
-					<button type="submit" class="btn btn-primary btn-block">Register</button>
+					<button type="submit" class="btn btn-primary btn-block">S'inscrire</button>
 				</form>
 			</div>
 		</div>
