--- a/germax-frontend/src/templates/components/content-auth/index.css
+++ b/germax-frontend/src/templates/components/content-auth/index.css
@@ -300,3 +300,23 @@ svg {
 #facultyContainer .form-select {
 	width: 240px; /* Устанавливаем нужную ширину для селекта факультетов */
 }
+
+.error-container {
+	position: absolute;
+	right: -330px; /* Расстояние от правого края inputbox */
+	top: 50%;
+	transform: translateY(-50%);
+	width: 250px; /* Ширина контейнера для ошибки */
+}
+
+.error-message {
+	color: red;
+	font-size: 12px;
+	background-color: #fff;
+	display: inline-block;
+	padding-left: 5px;
+}
+
+.input-error {
+	border-color: red;
+}
