вывел данные запроса на регистрацию в таблице

--- a/germax-frontend/src/templates/components/content-page-client-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.html
@@ -61,26 +61,101 @@
 			<div class="tab-content">
 				<!-- Content for "Étudiants Développement informatique" -->
 				<div class="tab-pane fade show active" id="devInfo" role="tabpanel" aria-labelledby="devInfo-tab">
-					<!-- Cards or any other content -->
+					<div class="table-responsive">
+						<table class="table align-middle" id="devInfoTable">
+							<thead>
+								<tr>
+									<th>Client</th>
+									<th>Email</th>
+									<th>Téléphone</th>
+									<th>Dernier équipement loué</th>
+									<th>Date de prise</th>
+									<th>Date de restitution</th>
+									<th>État du matériel rendu</th>
+									<th>Statut du client</th>
+									<th>Action</th>
+								</tr>
+							</thead>
+							<tbody>
+								<!-- Строки будут добавляться здесь динамически -->
+							</tbody>
+						</table>
+					</div>
 				</div>
 				<div class="tab-pane fade" id="sysReseau" role="tabpanel" aria-labelledby="sysReseau-tab">
-					<!-- Content for "Étudiants Systèmes, réseaux et cybersécurité" -->
+					<div class="table-responsive">
+						<table class="table align-middle" id="sysReseauTable">
+							<thead>
+								<tr>
+									<th>Client</th>
+									<th>Email</th>
+									<th>Téléphone</th>
+									<th>Dernier équipement loué</th>
+									<th>Date de prise</th>
+									<th>Date de restitution</th>
+									<th>État du matériel rendu</th>
+									<th>Statut du client</th>
+									<th>Action</th>
+								</tr>
+							</thead>
+							<tbody>
+								<!-- Строки будут добавляться здесь динамически -->
+							</tbody>
+						</table>
+					</div>
 				</div>
 				<div class="tab-pane fade" id="comMarketing" role="tabpanel" aria-labelledby="comMarketing-tab">
-					<!-- Content for "Étudiants Commerce et Marketing digital" -->
+					<div class="table-responsive">
+						<table class="table align-middle" id="comMarketingTable">
+							<thead>
+								<tr>
+									<th>Client</th>
+									<th>Email</th>
+									<th>Téléphone</th>
+									<th>Dernier équipement loué</th>
+									<th>Date de prise</th>
+									<th>Date de restitution</th>
+									<th>État du matériel rendu</th>
+									<th>Statut du client</th>
+									<th>Action</th>
+								</tr>
+							</thead>
+							<tbody>
+								<!-- Строки будут добавляться здесь динамически -->
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
 
 		<!-- Teachers Tab Pane -->
 		<div class="tab-pane fade" id="teachers" role="tabpanel" aria-labelledby="teachers-tab">
-			<!-- Content for Teachers -->
-			<p>La liste des enseignants</p>
+			<div class="table-responsive">
+				<table class="table align-middle" id="teachersTable">
+					<thead>
+						<tr>
+							<th>Client</th>
+							<th>Email</th>
+							<th>Téléphone</th>
+							<th>Dernier équipement loué</th>
+							<th>Date de prise</th>
+							<th>Date de restitution</th>
+							<th>État du matériel rendu</th>
+							<th>Statut du client</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+					<tbody>
+						<!-- Строки будут добавляться здесь динамически -->
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
 </div>
 
-<div class="card-body">
+<!-- <div class="card-body">
 	<div class="table-responsive">
 		<table class="table align-middle">
 				<thead>
@@ -199,7 +274,7 @@
 				</tbody>
 			</table>
 		</div>
-	</div>
+	</div> -->
 
 
 <!-- Modal -->
